Exercicios de JavaScript

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>JavaScript - Aula</h1>
+    <h2>Exercicios</h2>
 
-    <script src="areaCirculo.js"></script>
+    <script src="Exercicio2/Atv3.js"></script>
+    <!-- <script>
+        // let num = prompt('digite um número: ')
+
+        // if (num%2 == 0) {
+        //     console.log('é par')
+        // } else {
+        //     console.log('condição final atendida')
+        //     console.log('é impar')  
+        // }    
+        
+        let turno = prompt('digite um turno')
+        turno = turno.toLowerCase()
+
+        if (turno == 'manhã') {
+            console.log('Bom dia!')
+        } 
+        else if(turno == 'tarde') {
+            console.log('Boa tarde!')
+        }
+        else {
+            console.log('Boa noite!')
+        }
+    </script> -->
 </body>
 </html>
