Mais exercicios de JavaScript e uso do SwitchCase

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>JavaScript - Aula</h1>
     <h2>Exercicios</h2>
 
-    <script src="Exercicio2/Atv3.js"></script>
+    <script src="contaBancaria.js"></script>
     <!-- <script>
         // let num = prompt('digite um número: ')
 
