Cálculo de Salário Final feito (Diferente da professora)

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <h1>JavaScript - Aula</h1>
     <h2>Exercicios</h2>
 
-    <script src="contaBancariaValidacao.js"></script>
+    <script src="calculodeSalarioFinal.js"></script>
     <!-- <script>
-        // let num = prompt('digite um número: ')
+        let num = prompt('digite um número: ')
 
-        // if (num%2 == 0) {
-        //     console.log('é par')
-        // } else {
-        //     console.log('condição final atendida')
-        //     console.log('é impar')  
-        // }    
+        if (num%2 == 0) {
+            console.log('é par')
+        } else {
+            console.log('condição final atendida')
+            console.log('é impar')  
+        }    
         
+
         let turno = prompt('digite um turno')
         turno = turno.toLowerCase()
 
