Exercícios de FOR

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>JavaScript - Aula</h1>
     <h2>Exercicios</h2>
 
-    <script src="calculodeSalarioFinal.js"></script>
+    <script src="lacoFor.js"></script>
     <!-- <script>
         let num = prompt('digite um número: ')
 
