--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>JavaScript - Aula</h1>
     <h2>Exercicios</h2>
 
-    <script src="ARRAY/filaEpilha.js"></script>
+    <script src="ARRAY/objetos.js"></script>
     <!-- <script>
         let num = prompt('digite um número: ')
 
