--- a/HTMLcomJS/funcionarios.html
+++ b/HTMLcomJS/funcionarios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,18 @@
         body {
             font-family: sans-serif;
         }
+
         h1 {
             margin-top: 20px;
             text-align: center;
         }
+
         #containerFuncionarios {
             flex-wrap: wrap;
             display: flex;
             justify-content: space-evenly;
         }
+
         .cardFuncionario {
             border: 2px solid black;
             background-color: darkgray;
@@ -27,22 +31,24 @@
             flex-direction: column;
             margin-bottom: 10px;
             width: 300px;
-            height: 300px;
             border-radius: 10px;
         }
+
         img {
-            width: 150px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
         }
     </style>
 </head>
+
 <body>
     <h1>Funcionários</h1>
     <div id="containerFuncionarios">
-        <div class="cardFuncionario">
-            
-        </div>
+
     </div>
-    
+
+    <script src="funcionarios.js"></script>
 </body>
+
 </html>
